--- a/style.css
+++ b/style.css
@@ -12,6 +12,22 @@ html, body {
     display: flex;
 }
 
+.popup {
+   left:50%;
+   top:50%;
+   transform: translate(-50%, -50%);
+   -webkit-transform: translate(-50%, -50%);
+   -moz-transform: translate(-50%, -50%);
+   position: absolute;
+   display: none;
+}
+
+.score {
+    left: 0px;
+    top: 0px;
+    position:absolute;
+}
+
 .rangeSlider {
     width: 180px;
     margin-right: 30px;
